CTA: Prevent Image Stretching When Button Alignment is Bottom

--- a/widgets/cta/styles/default.less
+++ b/widgets/cta/styles/default.less
@@ -73,6 +73,8 @@
 	}
 
 	& when ( @button_align = bottom ) {
+		flex-direction: column;
+
 		.sow-cta-text {
 			text-align: center;
 		}
